<resources>
    <string name="app_name">FavoritePet</string>
    <string name="msg_title">선택을 시작하시겠습니까?</string>
    <string name="check_lal">시작힘</string>
    <string name="msg_quest">좋아하는 애완동물을 선택하세요</string>
    <string name="pet_ant">개미핥기</string>
    <string name="pet_cat">고양이</string>
    <string name="pet_cobra">코브라</string>
    <string name="pet_dochi">고슴도치</string>
    <string name="pet_micat">미어켓</string>
    <string name="bur_lbl">선택완료</string>
</resources>
