<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="woojy.kr.hs.emirim.favoritepet.MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/msg_title"
       android:textSize="20sp"
       />
    <CheckBox
        android:id="@+id/check_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_lal"
        />
    <TextView
        android:id="@+id/text_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_quest"
        android:textSize="20sp"
        android:visibility="invisible"
        />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        >
        <RadioButton
            android:id="@+id/radio_ant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_ant"
            />
        <RadioButton
            android:id="@+id/radio_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_cat"
            />
        <RadioButton
            android:id="@+id/radio_cobra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_cobra"
            />
        <RadioButton
            android:id="@+id/radio_dochi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_dochi"
            />
        <RadioButton
            android:id="@+id/radio_micat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_micat"
            />
    </RadioGroup>
    <Button
        android:id="@+id/but_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bur_lbl"
        android:visibility="invisible"
        />
    <ImageView
        android:id="@+id/img_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ant"
        android:visibility="invisible"
        />
</LinearLayout>
